# TonikX-ITMO_ICT_WebDevelopment_2025-2026

./: .gitignore
sutdents/K3340/laboratory_works/Turishchev_Artem/laboratiry_work_3/: pyproject.toml  requirements.txt
sutdents/K3340/laboratory_works/Turishchev_Artem/laboratiry_work_3/hotel_management/hotel_app/: models.py  serializers.py  urls.py  views.py
sutdents/K3340/laboratory_works/Turishchev_Artem/laboratiry_work_3/hotel_management/hotel_app/migrations/: 0001_initial.py  0002_remove_room_is_occupied.py  0003_cleaningrecord.py
sutdents/K3340/laboratory_works/Turishchev_Artem/laboratiry_work_3/hotel_management/hotel_management/: settings.py  urls.py
sutdents/K3340/laboratory_works/Turishchev_Artem/laboratiry_work_4/: package-lock.json
sutdents/K3340/laboratory_works/Turishchev_Artem/laboratiry_work_4/test/: components.d.ts  package-lock.json  package.json  typed-router.d.ts
sutdents/K3340/laboratory_works/Turishchev_Artem/laboratory_work_1/task_1/: client.py  server.py
sutdents/K3340/laboratory_works/Turishchev_Artem/laboratory_work_1/task_2/: client.py  config.py  server.py
sutdents/K3340/laboratory_works/Turishchev_Artem/laboratory_work_1/task_3/: index.html  server.py
sutdents/K3340/laboratory_works/Turishchev_Artem/laboratory_work_1/task_4/: client.py  msg_dataclass.py  server.py
sutdents/K3340/laboratory_works/Turishchev_Artem/laboratory_work_2/: Dockerfile  compose.yml  pyproject.toml  requirements.txt
sutdents/K3340/laboratory_works/Turishchev_Artem/reports/: mkdocs.yml
(+88 files in other folders)
